--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
 PORT=9000
-URL_MONGODB_DEV=
-JWT_SECRET_KEY=
-JWT_EXPIRATION=
+URL_MONGODB_DEV=mongodb://localhost:27017/db_semina
+JWT_SECRET_KEY=JWT_SECRET_KEYsdfsdfsdfsdf
+JWT_EXPIRATION=1m
+JWT_REFRESH_TOKEN_SECRET_KEY=JWT_SECRET_KEY_REFRESH_TOKENsdfsdfsdfsfsdfsdfsdfsdfsdfsdfsdfsdf
+JWT_REFRESH_TOKEN_EXPIRATION=24H
+GMAIL=okemantapjiwa@gmail.com
+PASSWORD=dsfer34v34f34c
